--- a/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp2.html
@@ -633,7 +633,7 @@ int main() {
   <p>Какое наименьшее количество плит понадобится для замощения площади? Разрешено покрыть плитами большую поверхность, чем театральная площадь, но она должна быть покрыта обязательно. Гранитные плиты нельзя ломать или дробить, а разрешено использовать только целиком. Границы плит должны быть параллельны границам площади.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано три целых натуральных числа n, m и a (1 ≤ n, m, a ≤ 10<sup>9</sup>).</p>
+  <p>В первой строке записано три целых натуральных числа n, m и a (1 ≤ n, m, a ≤ 10⁹).</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите искомое количество плит.</p>
@@ -825,7 +825,7 @@ int main() {
   <p>У него есть n долларов. Сколько долларов ему придется одолжить у однополчанина, чтобы купить w бананов?</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано три положительных целых числа k, n, w (1 ≤ k, w ≤ 1000, 0 ≤ n ≤ 10<sup>9</sup>), стоимость первого банана, изначальное количество долларов у солдата и количество бананов, которые он хочет купить.</p>
+  <p>В первой строке записано три положительных целых числа k, n, w (1 ≤ k, w ≤ 1000, 0 ≤ n ≤ 10⁹), стоимость первого банана, изначальное количество долларов у солдата и количество бананов, которые он хочет купить.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — количество долларов, которое солдату надо одолжить у однополчанина. Если деньги одалживать не надо, выведите 0.</p>
@@ -879,7 +879,7 @@ int main() {
   <p>К сожалению, не все числа счастливые. Петя называет число почти счастливым, если количество счастливых цифр в нем — счастливое число. Ему интересно, является ли число n почти счастливым.</p>
 
   <h4>Входные данные</h4>
-  <p>В единственной строке задано целое число n (1 ≤ n ≤ 10<sup>18</sup>).</p>
+  <p>В единственной строке задано целое число n (1 ≤ n ≤ 10¹⁸).</p>
 
   <p>Пожалуйста, не используйте спецификатор %lld для чтения или записи 64-битных чисел на С++. Рекомендуется использовать потоки cin, cout или спецификатор %I64d.</p>
 
@@ -948,7 +948,7 @@ int main() {
   <p>Вам заданы события в хронологическом порядке. Каждое событие — это: либо совершение преступления, либо прием на работу нового полицейского. Какое минимальное количество преступлений в любом случае останутся нераскрытыми?</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число n (1 ≤ n ≤ 10<sup>5</sup>) — количество событий. В следующей строке записано n целых чисел, описывающих события, через пробел.</p>
+  <p>В первой строке записано целое число n (1 ≤ n ≤ 10⁵) — количество событий. В следующей строке записано n целых чисел, описывающих события, через пробел.</p>
 
   <p>Если число равняется -1, значит, произошло одно преступление. В противном случае, число будет положительным (не больше 10) и будет равняться количеству полицейских, нанятых в этот момент. События заданы в хронологическом порядке.</p>
 
@@ -1035,17 +1035,17 @@ int main() {
   дивизиона по их рейтингу:</p>
 
   <ol>
-    <li>Для 1-го дивизиона: 1900≤rating</li>
-    <li>Для 2-го ивизиона: 1600≤rating≤1899</li>
-    <li>Для 3-го дивизиона: 1400≤rating≤1599</li>
-    <li>Для 4-го дивизиона: rating≤1399</li>
+    <li>Для 1-го дивизиона: 1900 ≤ rating</li>
+    <li>Для 2-го ивизиона: 1600 ≤ rating ≤ 1899</li>
+    <li>Для 3-го дивизиона: 1400 ≤ rating ≤ 1599</li>
+    <li>Для 4-го дивизиона: rating ≤ 1399</li>
   </ol>
 
   <p> Учитывая rating, выведите, к какому дивизиону относится rating</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка ввода содержит целое число t (1≤t≤10<sup>4</sup>) — количество наборов входных данных в тесте.</p>
-  <p>Описание каждого набора состоит из одной строки, содержащей одно целое число rating (-5000≤rating≤5000).</p>
+  <p>Первая строка ввода содержит целое число t (1 ≤ t ≤ 10⁴) — количество наборов входных данных в тесте.</p>
+  <p>Описание каждого набора состоит из одной строки, содержащей одно целое число rating (-5000 ≤ rating ≤ 5000).</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора входных данных выведите единственную строку, содержащую дивизион в формате «Division X», где X
@@ -1128,7 +1128,7 @@ int main() {
   <p>Номер билета — это строка, которая состоит ровно из шести цифр. Номер билета является счастливым, если сумма первых трёх цифр равна сумме последних трёх цифр. Задан номер билета, проверьте счастливый он или нет. Обратите внимание, что в номере могут быть лидирующие нули.</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка входных данных содержит целое число t (1≤t≤10<sup>3</sup>) — количество наборов входных данных в тесте.</p>
+  <p>Первая строка входных данных содержит целое число t (1 ≤ t ≤ 10³) — количество наборов входных данных в тесте.</p>
 
   <p>Далее следуют описания наборов, каждый из них — это одна строка, которая содержит шесть цифр.</p>
 
@@ -1223,7 +1223,7 @@ int main() {
   <p>Ваня хочет узнать, пирамиду какой максимальной высоты он может создать с использованием имеющихся кубиков.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число n (1 ≤ n ≤ 10<sup>4</sup>) — количество кубиков, подаренных Ване.</p>
+  <p>В первой строке записано целое число n (1 ≤ n ≤ 10⁴) — количество кубиков, подаренных Ване.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственной строкой максимально возможную высоту пирамиды.</p>
@@ -1294,7 +1294,7 @@ int main() {
   <p>По записи в карточке помогите Василию определить, какое наименьшее количество трапез в столовой санатория он мог пропустить. Трапезы, проходящие в день приезда Василия до его приезда и трапезы, проходящие в день отъезда Василия после его отъезда, пропущенными считать не следует.</p>
 
   <h4>Входные данные</h4>
-  <p>В единственной строке входных данных содержатся три целых числа b, d и s (0 ≤ b, d, s ≤ 10<sup>18</sup>, b + d + s ≥ 1) — количество завтраков, обедов и ужинов, которые посетил Василий во время отдыха в санатории, соответственно.</p>
+  <p>В единственной строке входных данных содержатся три целых числа b, d и s (0 ≤ b, d, s ≤ 10¹⁸, b + d + s ≥ 1) — количество завтраков, обедов и ужинов, которые посетил Василий во время отдыха в санатории, соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите единственное целое число — наименьшее возможное количество трапез, пропущенных Василием.</p>
@@ -1376,21 +1376,21 @@ int main() {
 
   <p>Опытным путем Поликарп установил, что псу требуется не менее k прогулок суммарно за любые два последовательных дня, чтобы чувствовать себя отлично. Например, если k = 5 и вчера Поликарп гулял с собакой 2 раза, то сегодня он должен будет погулять не менее 3-х раз.</p>
 
-  <p>Поликарп проанализировал все свои дела на ближайшие n дней вперед и составил последовательность из n целых чисел a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub>, где a<sub>i</sub> — количество прогулок с собакой, которые он совершит в i-й день, исполняя все свои дела во время них (например, ему надо сходить в магазин, выбросить мусор и так далее).</p>
+  <p>Поликарп проанализировал все свои дела на ближайшие n дней вперед и составил последовательность из n целых чисел a₁, a₂, ..., aₙ, где aᵢ — количество прогулок с собакой, которые он совершит в i-й день, исполняя все свои дела во время них (например, ему надо сходить в магазин, выбросить мусор и так далее).</p>
 
   <p>Помогите Поликарпу определить наименьшее количество прогулок сверх намеченных, которые ему нужно совершить за n дней для того, чтобы Кормен чувствовал себя отлично на протяжении всех n дней. Вы можете считать, что в день до первого и в день после n-го Поликарп выгуливал Кормена ровно по k раз.</p>
 
-  <p>Напишите программу, которая найдет наименьшее количество дополнительных прогулок и соответствующее расписание — последовательность целых чисел b<sub>1</sub>, b<sub>2</sub>, ..., b<sub>n</sub> (b<sub>i</sub> ≥ a<sub>i</sub>), где b<sub>i</sub> обозначает суммарное количество прогулок в i-й день.</p>
+  <p>Напишите программу, которая найдет наименьшее количество дополнительных прогулок и соответствующее расписание — последовательность целых чисел b₁, b₂, ..., bₙ (bᵢ ≥ aᵢ), где bᵢ обозначает суммарное количество прогулок в i-й день.</p>
 
   <h4>Входные данные</h4>
   <p>В первой строке входных данных записаны два целых числа n и k (1 ≤ n, k ≤ 500) — количество дней и минимальное суммарное количество прогулок Кормена за любые два подряд идущих дня.</p>
 
-  <p>Во второй строке записаны целые числа a<sub>1</sub>, a<sub>2</sub>, ..., a<sub>n</sub> (0 ≤ a<sub>i</sub> ≤ 500) — количество прогулок Кормена в i-й день, которые уже запланированы Поликарпом.</p>
+  <p>Во второй строке записаны целые числа a₁, a₂, ..., aₙ (0 ≤ aᵢ ≤ 500) — количество прогулок Кормена в i-й день, которые уже запланированы Поликарпом.</p>
 
   <h4>Выходные данные</h4>
   <p>В первую строку выведите наименьшее дополнительное количество прогулок, которые нужно совершить за n дней для того, чтобы Кормен всегда чувствовал себя отлично.</p>
 
-  <p>Во вторую строку выведите n целых чисел b<sub>1</sub>, b<sub>2</sub>, ..., b<sub>n</sub>, где b<sub>i</sub> — суммарное количество прогулок в i-й день в соответствии с найденным решением (a<sub>i</sub> ≤ b<sub>i</sub> для всех i от 1 до n). Если решений несколько, разрешается вывести любое из них.</p>
+  <p>Во вторую строку выведите n целых чисел b₁, b₂, ..., bₙ, где bᵢ — суммарное количество прогулок в i-й день в соответствии с найденным решением (aᵢ ≤ bᵢ для всех i от 1 до n). Если решений несколько, разрешается вывести любое из них.</p>
 
   <h4>Пример 1</h4>
 <pre>
@@ -1489,7 +1489,7 @@ int main() {
 
   <h4>Входные данные</h4>
   <p>Первая строка содержит одно целое число n (1 ≤ n ≤ 360) — количество кусков, на которые разрезана пицца.</p>
-  <p>Во второй строке записаны n целых чисел a<sub>i</sub> (1 ≤ a<sub>i</sub> ≤ 360) — углы секторов, на которые разрезана пицца. Сумма всех a<sub>i</sub> равна 360.</p>
+  <p>Во второй строке записаны n целых чисел aᵢ (1 ≤ aᵢ ≤ 360) — углы секторов, на которые разрезана пицца. Сумма всех aᵢ равна 360.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — минимально возможную разницу между углами секторов пиццы которые достанутся Васе и Пете.</p>
@@ -1604,16 +1604,16 @@ int main() {
 
   <p>Совсем скоро в Берляндии состоится парад победы над инопланетными захватчиками. К сожалению, в войне погибли все солдаты, и теперь армия состоит исключительно из новобранцев, многие из которых даже не знают, с какой ноги начинается марш. Гражданское население тоже плохо понимает, с какой ноги начинается марш, поэтому важно лишь, чтобы как можно больше солдат шли в одну ногу.</p>
 
-  <p>В параде будут принимать участие n пеших колонн, i-я из которых состоит из l<sub>i</sub> солдат, начинающих марш с левой ноги, и r<sub>i</sub> солдат, начинающих марш с правой ноги.</p>
+  <p>В параде будут принимать участие n пеших колонн, i-я из которых состоит из lᵢ солдат, начинающих марш с левой ноги, и rᵢ солдат, начинающих марш с правой ноги.</p>
 
   <p>Красота парада вычисляется по следующей формуле: если L — это суммарное количество солдат на параде, начинающих марш с левой ноги, а R — это суммарное количество солдат на параде, начинающих марш с правой ноги, то красота будет равна |L - R|.</p>
 
-  <p>Вы можете выбрать не более чем одну колонну, и изменить с какой ноги начинают марш все солдаты данной колонны. Формально, разрешается не более одного раза выбрать какой-то индекс i и поменять местами значения l<sub>i</sub> и r<sub>i</sub>.</p>
+  <p>Вы можете выбрать не более чем одну колонну, и изменить с какой ноги начинают марш все солдаты данной колонны. Формально, разрешается не более одного раза выбрать какой-то индекс i и поменять местами значения lᵢ и rᵢ.</p>
 
   <p>Найдите номер колонны, при смене шага в которой красота парада станет максимально возможной, или определите, что такой операцией улучшить красоту парада нельзя.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке содержится одно число n (1 ≤ n ≤ 10<sup>5</sup>) — количество пеших колонн. В следующих n строках находятся пары целых чисел l<sub>i</sub> и r<sub>i</sub> (1 ≤ l<sub>i</sub>, r<sub>i</sub> ≤ 500) — количество солдат в i-й колонне, начинающих марш с левой и с правой ноги соответственно.</p>
+  <p>В первой строке содержится одно число n (1 ≤ n ≤ 10⁵) — количество пеших колонн. В следующих n строках находятся пары целых чисел lᵢ и rᵢ (1 ≤ lᵢ, rᵢ ≤ 500) — количество солдат в i-й колонне, начинающих марш с левой и с правой ноги соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число k — номер колонны, в которой следует сменить шаг, или 0, если максимальная красота уже достигнута.</p>
