--- a/src/components/code/code-c/pages/elem-book2.html
+++ b/src/components/code/code-c/pages/elem-book2.html
@@ -433,11 +433,303 @@ int main() {
 <article class="article">
   <div class="anchor" id="p3.1"></div>
   <h3>3.1 Странные типы-1 (42)</h3>
+
+  <p>int - целое число. float - дробное число, округленное с некоторой точностью. Округление возникает из-за ограниченной памяти на хранение одной переменной. В памяти компьютера дробные числа хранятся в двух целых числах - мантиса занимает 6 знаков, а порядок - число от -37 до +37</p>
+  <code>0.00001 = 1E-5</code>
+
+  <details>
+    <summary>Программа 10 (42)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  float a, b = 2.0;
+  int c = 3;
+  a = b / c;
+
+  printf("a = %f\n", a);
+}
+</pre>
+  </details>
+
+  <p>Оператор sizeof() возвращает число байт в указанной переменной</p>
+  <p>Целые числа по умолчанию имеют тип int. Тип long помечается буквой l в конце числа</p>
+  <p>Дробные числа по умолчанию имеют тип double. Тип float помечается буквой f в конце числа</p>
+
+  <details>
+    <summary>Программа 11 (44)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  char a;
+  int b;
+  long c;
+  float d;
+  double e;
+
+  a = sizeof(char);
+  printf("Size char = %d\n", a);
+  a = sizeof(int);
+  printf("Size int = %d\n", a);
+  a = sizeof(long);
+  printf("Size long = %d\n", a);
+  a = sizeof(float);
+  printf("Size float = %d\n", a);
+  a = sizeof(double);
+  printf("Size double = %d\n", a);
+}
+</pre>
+  </details>
 </article>
 
 
-<br><a href="#p3.2">3.2 Странные типы-2 (45)</a>
-<br><a href="#p3.3">3.3 Анатомия типов (47)</a>
-<br><a href="#p3.4">3.4 Подбирайте выражения (53)</a>
-<br><a href="#p3.5">3.5 Строки и символы (57)</a>
-<br><a href="#p3.6">3.6 Указатели (62)</a>
+<!-- 3.2 Странные типы-2 -->
+<article class="article">
+  <div class="anchor" id="p3.2"></div>
+  <h3>3.2 Странные типы-2 (45)</h3>
+
+  <p>Компьютер, на котором создавался язык Си, имел всего 24 килобайта оперативной памяти. Поэтому для экономии памяти существуют различные типы данных. Если нужно указать что число беззнаковое, то в конце него ставится буква u.</p>
+</article>
+
+
+<!-- 3.3 Анатомия типов -->
+<article class="article">
+  <div class="anchor" id="p3.3"></div>
+  <h3>3.3 Анатомия типов (47)</h3>
+
+  <p>Все целые числа хранятся в памяти одинаково. Рассмотрим как они хранятся на примере типа char размером 1 байт.</p>
+  <p>Сначала посмотрим на беззнаковый тип. Значения переменной unsigned char могут быть от 0 до 255. В двоичном виде от 00000000 до 11111111. В шестнадцатеричном от 00 до FF. Если к 255 прибавить 1, то значение будет равно 0.</p>
+  <p>Шестнадцатеричные числа записываются константами, которые начинаются с 0x. Используются когда важно не значение числа, а расположение его бит.</p>
+
+  <details>
+    <summary>Программа 12 (50)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int i;
+  i = 0xFF;
+  printf("%d\n", i);
+}
+</pre>
+  </details>
+
+  <p>Теперь посмотрим на числа со знаком. Знак числа хранится в старшем разряде. Если там 0 то число положительное, если 1 - отрицательное. Сумма положительного и отрицательного числа, равных по величине, равня 0.</p>
+  <p>Программа 13 будет работать вечно потому что переменная unsigned char никогда не примет значение больше чем 255.</p>
+
+  <details>
+    <summary>Программа 13 (52)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  unsigned char i;
+  // бесконечный цикл
+  for (i = 0; i &lt;= 255; i++) {
+    printf("%d\n", i);
+  }
+}
+</pre>
+  </details>
+
+  <p>Компилятор не может и не хочет обнаруживать такие ошибки. Язык Си создавался для программистов, которым не нужно мешать надоедливыми проверками и предупреждениями. Компилятор считает что программист хорошо знает что делает.</p>
+</article>
+
+
+<!-- 3.4 Подбирайте выражения -->
+<article class="article">
+  <div class="anchor" id="p3.4"></div>
+  <h3>3.4 Подбирайте выражения (53)</h3>
+
+  <p>Использование переменных разных типов экономит память и ускоряет выполнение программ. Но нужно хорошо понимать как переменные взаимодействуют друг с другом.</p>
+  <p>При делении одного целого числа на другое, результат будет целое число (дробная часть просто отбрасывается) даже если результат присваивается в переменную типа double.</p>
+  <p>Чтобы в переменной оказалось дробное число, нужно чтобы одно из чисел было дробное. Когда производится операция над переменными разного типа, то более узкий тип приводится к более широкому.</p>
+
+  <details>
+    <summary>Программа 14 (54)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int a = 2;
+  int b = 3;
+  float c;
+  c = a / b;
+  printf("%f\n", c);
+  c = 2.0 / b;
+  printf("%f\n", c);
+  c = a / (float)b;
+  printf("%f\n", c);
+}
+</pre>
+  </details>
+
+  <p>В операции c = 2.0 / b; компилятор создаст временную переменную (копию переменной b), преобразует ее в тип float, выполнит операцию деления и результат запишется в переменную c. Сама переменная b останется неизменной.</p>
+  <p>Используя явное приведение типов, можно самому приводить переменную к нужному типу. Операция (float)b приведет переменную b к типу float</p>
+  <p>При операциях с целыми числами, если результат не помещается в переменнойт того же типа, то происходит переполнение. в результате приведения или переполнения могут быть потери. Бывает что переменную одного типа нельзя привести к другому типу без потерь.</p>
+
+  <details>
+    <summary>Программа 15 (56)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  unsigned char ch1 = 0xFF;
+  signed char ch2 = 0xFF;
+  int i;
+  i = ch1;
+  printf("%d\n", i); // 255
+  i = ch2;
+  printf("%d\n", i); // -1
+  printf("%u\n", i); // 4294967295
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 3.5 Строки и символы -->
+<article class="article">
+  <div class="anchor" id="p3.5"></div>
+  <h3>3.5 Строки и символы (57)</h3>
+
+  <p>Строки состоят из символов. Один символ кодируется восемью битами и может храниться в переменной типа char. Строки пишутся в двойных кавычках, символы - в одинарных. Для компьютера символ это просто двоичное число, занимающее 1 байт. Есть и невидимые символы, которые можно записать используюя обратный слеш, например '\n'.</p>
+  <code>char ch1 = 'a';</code>
+  <code>char ch2 = '\n';</code>
+  <p>Поскольку строка состоит из символов, то ее кодируют используя массив типа char.</p>
+  <code>char s1[4] = {'m','a','m','a'};</code>
+  <p>В цикле, зная длину массива, можно вывести строку, записанную в массиве символов</p>
+
+  <details>
+    <summary>Программа 16 (58)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  char s[4] = {'m','a','m','a'};
+  for (int i = 0; i &lt; 4; i++) {
+    printf("%c", s[i]);
+  }
+}
+</pre>
+  </details>
+
+  <p>Если последним символом в массив записать символ-терминатор, то можно вывести строку не зная ее длины.</p>
+  <code>char s2[5] = {'m','a','m','a','\0'};</code>
+
+  <details>
+    <summary>Программа 17 (59)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  char s[5] = {'m','a','m','a','\0'};
+  int i = 0;
+  while (s[i] != '\0') {
+    printf("%c", s[i]);
+    i++;
+  }
+}
+</pre>
+  </details>
+
+  <p>Строка состоит из символов, заключенных в двойные кавычки и завершается символом '\0'. Чтобы записать строку в массив, надо присвоить строку массиву символов.</p>
+  <code>char s3[] = "mama";</code>
+  <p>Компилятор здесь создаст массив из пяти символов, последним символом он допишет '\0'.</p>
+
+  <details>
+    <summary>Программа 18 (60)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  char s[] = "mama";
+  int i = 0;
+  while (s[i]) {
+    printf("%c", s[i]);
+    i++;
+  }
+}
+</pre>
+  </details>
+
+  <p>Есть спецификатор для печати строк %s. Поэтому улучшенный вид программы примет короткий вид.</p>
+
+  <details>
+    <summary>Программа 19 (61)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  char s[] = "mama";
+  printf("%s", s);
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 3.6 Указатели -->
+<article class="article">
+  <div class="anchor" id="p3.6"></div>
+  <h3>3.6 Указатели (62)</h3>
+
+  <p>Имя массива указывает на ячейку памяти, где начинается массив. Адрес ячейки памяти можно передать и другим способом, через <strong>указатель</strong>. Перед тем как использовать указатель, его надо объявить. Чтобы объявить указатель, перед его именем ставится звездочка *.</p>
+  <code>char *ps = "mama";</code>
+  <p>Выведем слово mama используя указатель</p>
+
+  <details>
+    <summary>Программа 20 (62)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  char *ps = "mama";
+  printf("%s", ps);
+}
+</pre>
+  </details>
+
+  <p>Можно объявить указатель не только на строку, но и на другую переменную. Объявим указатель на адрес где хранится целое число. Сам адрес можно записать позже, используя оператор &.</p>
+  <code>int *pa;</code>
+  <p>Объявим переменную a целого типа и указатель pa на переменную целого типа. Запишем в указатель pa адрес переменной a. Изменим значение на которое указывает указатель pa и выведем значение переменной a.</p>
+
+  <details>
+    <summary>Программа 21 (63)</summary>
+<pre>
+#include &lt;stdio.h&gt;
+
+int main() {
+  int a;
+  int *pa;
+  a = 2;
+  pa = &a;
+  *pa = 3;
+  printf("%d\n", a);
+}
+</pre>
+  </details>
+</article>
+
+
+<!-- 4 Действия -->
+<article class="article">
+  <div class="anchor" id="p4"></div>
+  <h3>4 Действия (65)</h3>
+</article>
+
+
+<!-- 4.1 Очередность -->
+<article class="article">
+  <div class="anchor" id="p4.1"></div>
+  <h3>4.1 Очередность (65)</h3>
+</article>
+
+
+<br><a href="#p4.2">4.2 Условность (68)</a>
+<br><a href="#p4.3">4.3 Работа с указателями (72)</a>
+<br><a href="#p4.4">4.4 Битовые операции (74)</a>
+<br><a href="#p4.5">4.5 Функции (80)</a>
+<br><a href="#p4.6">4.6 Функции с длинными руками (84)</a>
+<br><a href="#p4.7">4.7 Рекурсия или раз, два, три (87)</a>
