--- a/src/components/code/code-ref/pages/elem-unicode.html
+++ b/src/components/code/code-ref/pages/elem-unicode.html
@@ -35,7 +35,7 @@
   <p>
     Нажмите на символ чтобы скопировать его в буфер обмена
   </p>
-  <p>
+  <div class="copy-flex">
     <div class="copy-to-clipboard">&#x2070;</div>
     <div class="copy-to-clipboard">&#xB9;</div>
     <div class="copy-to-clipboard">&#xB2;</div>
@@ -75,7 +75,7 @@
     <div class="copy-to-clipboard">&#x207C;</div>
     <div class="copy-to-clipboard">&#x207D;</div>
     <div class="copy-to-clipboard">&#x207E;</div>
-  </p>
+  </div>
 
   <details>
     <summary>Надстрочные символы (superscript)</summary>
@@ -132,7 +132,7 @@
   <p>
     Нажмите на символ чтобы скопировать его в буфер обмена
   </p>
-  <p>
+  <div class="copy-flex">
     <div class="copy-to-clipboard">&#x2080;</div>
     <div class="copy-to-clipboard">&#x2081;</div>
     <div class="copy-to-clipboard">&#x2082;</div>
@@ -161,7 +161,7 @@
     <div class="copy-to-clipboard">&#x208C;</div>
     <div class="copy-to-clipboard">&#x208D;</div>
     <div class="copy-to-clipboard">&#x208E;</div>
-  </p>
+  </div>
 
   <details>
     <summary>Подстрочные символы (subscript)</summary>
@@ -202,46 +202,63 @@
   <div class="anchor" id="need"></div>
   <h2>Нужные unicode символы</h2>
 
-  <pre>&#9; &amp;#x9;    &#9; Horiz Tab</pre>
-  <pre>&#9; &amp;#x20;   &#9; Space</pre>
-  <pre>&quot;    &#9; &amp;#x22;    &#9; &amp;qout;</pre>
-  <pre>&amp;     &#9; &amp;#x26;    &#9; &amp;amp;</pre>
-  <pre>&apos;    &#9; &amp;#x27;    &#9; &amp;apos;</pre>
-  <pre>&lt;      &#9; &amp;#x3C;    &#9; &amp;lt;</pre>
-  <pre>&equals;  &#9; &amp;#x3D;    &#9; &amp;equals;</pre>
-  <pre>&gt;      &#9; &amp;#x3E;    &#9; &amp;gt;</pre>
-  <pre>&#x7E;    &#9; &amp;#x7E;    &#9; Tilde</pre>
-  <pre>&#xB0;    &#9; &amp;#xB0;    &#9; Degree Sign</pre>
-  <pre>&plusmn;  &#9; &amp;#xB1;    &#9; &amp;plusmn;</pre>
-  <pre>&#x2010;  &#9; &amp;#x2010;  &#9; Hyphen</pre>
-  <pre>&#x2012;  &#9; &amp;#x2012;  &#9; Figure Dash</pre>
-  <pre>&#x2013;  &#9; &amp;#x2013;  &#9; En Dash</pre>
-  <pre>&#x2014;  &#9; &amp;#x2014;  &#9; Em Dash</pre>
-  <pre>&#x2015;  &#9; &amp;#x2015;  &#9; Horizontal Bar</pre>
-  <pre>&bull;    &#9; &amp;#x2022;  &#9; &amp;bull;</pre>
-  <pre>&#x2027;  &#9; &amp;#x2027;  &#9; Hyphenation Point</pre>
-  <pre>&#x2190;  &#9; &amp;#x2190;  &#9; Leftwards Arrow</pre>
-  <pre>&#x2191;  &#9; &amp;#x2191;  &#9; Upwards Arrow</pre>
-  <pre>&#x2192;  &#9; &amp;#x2192;  &#9; Rightwards Arrow</pre>
-  <pre>&#x2193;  &#9; &amp;#x2193;  &#9; Downwards Arrow</pre>
-  <pre>&#x2194;  &#9; &amp;#x2194;  &#9; Left Right Arrow</pre>
-  <pre>&#x2195;  &#9; &amp;#x2195;  &#9; Up Down Arrow</pre>
-  <pre>&#x2196;  &#9; &amp;#x2196;  &#9; North West Arrow</pre>
-  <pre>&#x2197;  &#9; &amp;#x2197;  &#9; North East Arrow</pre>
-  <pre>&#x2198;  &#9; &amp;#x2198;  &#9; South East Arrow</pre>
-  <pre>&#x2199;  &#9; &amp;#x2199;  &#9; South West Arrow</pre>
-  <pre>&#x2219;  &#9; &amp;#x2219;  &#9; Bullet Operator</pre>
-  <pre>&#x2248;  &#9; &amp;#x2248;  &#9; Almost Equal To</pre>
-  <pre>&#x2260;  &#9; &amp;#x2260;  &#9; &amp;ne;</pre>
-  <pre>&#x2261;  &#9; &amp;#x2261;  &#9; Identical To</pre>
-  <pre>&le;      &#9; &amp;#x2264;  &#9; &amp;le;</pre>
-  <pre>&ge;      &#9; &amp;#x2265;  &#9; &amp;ge;</pre>
-  <pre>&#x2500;  &#9; &amp;#x2500;  &#9; Box Drawings Light Horizontal</pre>
-  <pre>&#x2502;  &#9; &amp;#x2502;  &#9; Box Drawings Light Vertical</pre>
-  <pre>&#x250C;  &#9; &amp;#x250C;  &#9; Box Drawings Light Down and Right</pre>
-  <pre>&#x2510;  &#9; &amp;#x2510;  &#9; Box Drawings Light Down and Left</pre>
-  <pre>&#x2514;  &#9; &amp;#x2514;  &#9; Box Drawings Light Up and Right</pre>
-  <pre>&#x2518;  &#9; &amp;#x2518;  &#9; Box Drawings Light Up and Left</pre>
+  <p>
+    Нажмите на символ чтобы скопировать его в буфер обмена
+  </p>
+  <div class="copy-flex">
+    <div class="copy-to-clipboard">&#xB0;</div>
+    <div class="copy-to-clipboard">&#xB1;</div>
+    <div class="copy-to-clipboard">&#x2219;</div>
+    <div class="copy-to-clipboard">&#x2248;</div>
+    <div class="copy-to-clipboard">&#x2260;</div>
+    <div class="copy-to-clipboard">&#x2261;</div>
+    <div class="copy-to-clipboard">&#x2264;</div>
+    <div class="copy-to-clipboard">&#x2265;</div>
+</div>
+
+  <details>
+    <summary>Нужные unicode символы</summary>
+<pre>&#9; &amp;#x9;    &#9; Horiz Tab</pre>
+<pre>&#9; &amp;#x20;   &#9; Space</pre>
+<pre>&quot;    &#9; &amp;#x22;    &#9; &amp;qout;</pre>
+<pre>&amp;     &#9; &amp;#x26;    &#9; &amp;amp;</pre>
+<pre>&apos;    &#9; &amp;#x27;    &#9; &amp;apos;</pre>
+<pre>&lt;      &#9; &amp;#x3C;    &#9; &amp;lt;</pre>
+<pre>&equals;  &#9; &amp;#x3D;    &#9; &amp;equals;</pre>
+<pre>&gt;      &#9; &amp;#x3E;    &#9; &amp;gt;</pre>
+<pre>&#x7E;    &#9; &amp;#x7E;    &#9; Tilde</pre>
+<pre>&#xB0;    &#9; &amp;#xB0;    &#9; Degree Sign</pre>
+<pre>&plusmn;  &#9; &amp;#xB1;    &#9; &amp;plusmn;</pre>
+<pre>&#x2010;  &#9; &amp;#x2010;  &#9; Hyphen</pre>
+<pre>&#x2012;  &#9; &amp;#x2012;  &#9; Figure Dash</pre>
+<pre>&#x2013;  &#9; &amp;#x2013;  &#9; En Dash</pre>
+<pre>&#x2014;  &#9; &amp;#x2014;  &#9; Em Dash</pre>
+<pre>&#x2015;  &#9; &amp;#x2015;  &#9; Horizontal Bar</pre>
+<pre>&bull;    &#9; &amp;#x2022;  &#9; &amp;bull;</pre>
+<pre>&#x2027;  &#9; &amp;#x2027;  &#9; Hyphenation Point</pre>
+<pre>&#x2190;  &#9; &amp;#x2190;  &#9; Leftwards Arrow</pre>
+<pre>&#x2191;  &#9; &amp;#x2191;  &#9; Upwards Arrow</pre>
+<pre>&#x2192;  &#9; &amp;#x2192;  &#9; Rightwards Arrow</pre>
+<pre>&#x2193;  &#9; &amp;#x2193;  &#9; Downwards Arrow</pre>
+<pre>&#x2194;  &#9; &amp;#x2194;  &#9; Left Right Arrow</pre>
+<pre>&#x2195;  &#9; &amp;#x2195;  &#9; Up Down Arrow</pre>
+<pre>&#x2196;  &#9; &amp;#x2196;  &#9; North West Arrow</pre>
+<pre>&#x2197;  &#9; &amp;#x2197;  &#9; North East Arrow</pre>
+<pre>&#x2198;  &#9; &amp;#x2198;  &#9; South East Arrow</pre>
+<pre>&#x2199;  &#9; &amp;#x2199;  &#9; South West Arrow</pre>
+<pre>&#x2219;  &#9; &amp;#x2219;  &#9; Bullet Operator</pre>
+<pre>&#x2248;  &#9; &amp;#x2248;  &#9; Almost Equal To</pre>
+<pre>&#x2260;  &#9; &amp;#x2260;  &#9; &amp;ne;</pre>
+<pre>&#x2261;  &#9; &amp;#x2261;  &#9; Identical To</pre>
+<pre>&le;      &#9; &amp;#x2264;  &#9; &amp;le;</pre>
+<pre>&ge;      &#9; &amp;#x2265;  &#9; &amp;ge;</pre>
+<pre>&#x2500;  &#9; &amp;#x2500;  &#9; Box Drawings Light Horizontal</pre>
+<pre>&#x2502;  &#9; &amp;#x2502;  &#9; Box Drawings Light Vertical</pre>
+<pre>&#x250C;  &#9; &amp;#x250C;  &#9; Box Drawings Light Down and Right</pre>
+<pre>&#x2510;  &#9; &amp;#x2510;  &#9; Box Drawings Light Down and Left</pre>
+<pre>&#x2514;  &#9; &amp;#x2514;  &#9; Box Drawings Light Up and Right</pre>
+<pre>&#x2518;  &#9; &amp;#x2518;  &#9; Box Drawings Light Up and Left</pre>
+  </details>
 </article>
 
 
