--- a/src/components/alg/alg-conspect/sp/pages/elem-sp1.html
+++ b/src/components/alg/alg-conspect/sp/pages/elem-sp1.html
@@ -108,7 +108,7 @@
   <p>В один из жарких летних дней Петя и его друг Вася решили купить арбуз. Они выбрали самый большой и спелый, на их взгляд. После недолгой процедуры взвешивания весы показали w килограмм. Поспешно прибежав домой, изнемогая от жажды, ребята начали делить приобретенную ягоду, однако перед ними встала нелегкая задача. Петя и Вася являются большими поклонниками четных чисел, поэтому хотят поделить арбуз так, чтобы доля каждого весила именно четное число килограмм, при этом не обязательно чтобы доли были равными по величине. Ребята очень сильно устали и хотят скорее приступить к трапезе, поэтому вы должны подсказать им, удастся ли поделить арбуз, учитывая их пожелание. Разумеется, каждому должен достаться кусок положительного веса.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой и единственной строке входных данных записано челое число w (1 &le; w &le; 100) вес арбуза</p>
+  <p>В первой и единственной строке входных данных записано челое число w (1 ≤ w ≤ 100) вес арбуза</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите YES, если ребята смогут поделить арбуз на две части, каждая из которых весит четное число килограммм, и NO в противном случае</p>
@@ -160,7 +160,7 @@ int main() {
   <p>Слоник решил сходить в гости к другу. Оказалось, что дом слоника находится в точке 0, а дом его друга в точке x (x > 0) координатной прямой. За один шаг слоник может переместиться на 1, 2, 3, 4 или 5 позиций вперед. Помогите ему определить, за какое минимальное количество шагов он может добраться додома друга</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке входных данных записано одно целое число x (1 &le; x &le; 1000000) - координата дома друга слоника</p>
+  <p>В первой строке входных данных записано одно целое число x (1 ≤ x ≤ 1000000) - координата дома друга слоника</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите минимальное количество шагов, которые необходимо сделать слонику, чтобы попасть из точки 0 в точку x</p>
@@ -206,7 +206,7 @@ int main() {
   <p>Мишка Лимак хочет стать самым большим медведем, ну, или хотя бы стать больше своего старшего брата Боба. Сейчас вес Лимака равен a, а вес Боба равен b. Гарантируется, что вес Лимака меньше или равен весу Боба. Лимак ест много, и его вес утраивается каждый год, а вес Боба удваивается каждый год. Через сколько целых лет Лимак станет строго больше (т. е. будет весить строго больше) Боба?</p>
 
   <h4>Входные данные</h4>
-  <p>В единственной строке находятся два целых числа a и b (1≤a≤b≤10) — веса Лимака и Боба соответственно.</p>
+  <p>В единственной строке находятся два целых числа a и b (1 ≤ a ≤ b ≤ 10) — веса Лимака и Боба соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>Выведите одно целое число — через сколько целых лет Лимак станет строго больше Боба.</p>
@@ -266,10 +266,10 @@ int main() {
   <p>Заданы два целых числа a и b. Выведите a+b</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке записано целое число t (1≤t≤10<sup>4</sup>) — количество наборов входных данных в тесте. Далее следуют t наборов входных данных. Каждый набор задан одной строкой, которая содержит два целых числа a, b (-1000≤a,b≤1000).</p>
+  <p>В первой строке записано целое число t (1 ≤ t ≤ 10⁴) — количество наборов входных данных в тесте. Далее следуют t наборов входных данных. Каждый набор задан одной строкой, которая содержит два целых числа a, b (-1000 ≤ a, b ≤ 1000).</p>
 
   <h4>Выходные данные</h4>
-  <p>Выведите t целых чисел — искомые суммы a+b для каждого набора входных данных.</p>
+  <p>Выведите t целых чисел — искомые суммы a + b для каждого набора входных данных.</p>
 
   <h4>Пример</h4>
 <pre>
@@ -322,7 +322,7 @@ int main() {
   <p>Вам даны три целых числа a, b и c. Определите, является ли одно из них суммой двух других.</p>
 
   <h4>Входные данные</h4>
-  <p>Первая строка содержит число t (1≤t≤9261) — количество наборов входных данных. Описание каждого набора состоит из 3 чисел a, b, c (0≤a,b,c≤20).</p>
+  <p>Первая строка содержит число t (1 ≤ t ≤ 9261) — количество наборов входных данных. Описание каждого набора состоит из 3 чисел a, b, c (0 ≤ a, b, c ≤ 20).</p>
 
   <h4>Выходные данные</h4>
   <p>Для каждого набора выведите «YES», если одно из чисел равно сумме двух других, и «NO» в противном случае. Вы можете вывести ответ в любом регистре (например, строки «YEs», «Yes», «Yes» и «YES» будут считаться как положительный ответ).</p>
@@ -547,7 +547,7 @@ int main() {
   <p>Вам даны цвета домашней и выездной формы каждой команды. Для удобства эти цвета пронумерованы целыми числами таким образом, что никакие два разных цвета не имеют одинаковый номер. Помогите Манао найти ответ на его вопрос.</p>
 
   <h4>Входные данные</h4>
-  <p>В первой строке содержится целое число n (2≤n≤30). В каждой из следующих n строк записана пара разделенных одним пробелом различных целых чисел h<sub>i</sub>, a<sub>i</sub> (1≤h<sub>i</sub>, a<sub>i</sub>≤100) — номер цвета домашней и выездной форм i-ой команды соответственно.</p>
+  <p>В первой строке содержится целое число n (2 ≤ n ≤ 30). В каждой из следующих n строк записана пара разделенных одним пробелом различных целых чисел hᵢ, aᵢ (1 ≤ hᵢ, aᵢ ≤ 100) — номер цвета домашней и выездной форм i-ой команды соответственно.</p>
 
   <h4>Выходные данные</h4>
   <p>В единственной строке выведите количество матчей, в которых домашняя команда выступит в выездной форме.</p>
